Sample input files documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -27,6 +27,20 @@
 # first run is configured using "initialDimensions", "initialArrangement" and "numOrParticles" parameters in this
 # section.
 
+# There is a subset of parameters, which are inherited from a previous run to the next one and can be also specified in
+# the general section to be inherited by the first run, namely:
+# 1. temperature
+# 2. pressure
+# 3. moveTypes
+# 4. scalingType
+# 5. volumeStepSize
+# They are denoted as [INHERITABLE PARAMETERS] in their documentation. Each run can override some or all of the
+# inherited parameters by explicitly specifying their values. Inheritable parameters are for the convenience sake
+# - typically, one keeps for example a constant temperature and only changes the pressure from run to run. Move types
+# and scaling type also remain unaltered throughout simulation in most of the cases. However sometimes one may want to
+# for example change the scaling type to anisotropic once anisotropic structures emerge - the choice is therefore left
+# for the user.
+
 # Below is the full list of general parameters with a detailed description of each.
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
@@ -180,6 +194,47 @@ walls =
 # The number of molecules to be simulated
 numOfParticles = 1000
 
+# [INHERITABLE PARAMETER]
+#
+# Temperature in k_B units. The temperature can be just a floating-point constant, or a dynamic parameter, which changes
+# based on a current simulation cycles. Available dynamic parameters:
+# 1. const [value]
+#    A constant parameter, which always has the same value. It is exactly the same as just passing a single number.
+# 2. linear [initial value] [slope]
+#    If current cycle is "[current cycle]", the value is calculated as "[initial value]" + "[slope]" * "[current cycle]"
+# 3. exp [initial value] [rate]
+#    If current cycle is "[current cycle]", the value is calculated as
+#    [initial value]" * exp("[rate]" * "[current cycle]")
+# 4. piecewise [cycle 1] [parameter 1] , [cycle 2] [parameter 2] , ...
+#    A piecewise combination of dynamic parameters. The parameters are separated by commas. First, the number of cycle
+#    "[cycle ...]" is given when the specific parameter should start, and then parameter specification
+#    "[parameter ...]", (as in 1. - 3.). "[cycle 1]" has to be equal 0 and subsequent "[cycle ...]"-s should be in an
+#    ascending order. Constituent parameters are shifted so that they always start from 0. As an example:
+#       "piecewise 0 const 10 , 1000 linear 10 0.01 , 2000 20"
+#    There, in cycles 0-999 temperature is constant and equal 10, then in cycles 1000-1999 it grows linearly to 20
+#    (to be precise, at cycle 1999 it is 19.99), and then it becomes 20 in 2000-th cycle and stays as such indefinitely.
+#    Note, that for the 3-rd parameter a single value "20" was used equivalently to "const 20".
+# It is important to note that last change of the temperature happens after the last thermalisation cycle and is frozen
+# in the averaging stage. It is advisable to use a constant temperature for some number of cycles in the last part of
+# the thermalization stage.
+#
+# Please note, that all non-constant dynamic parameters base their values only on the cycle number - it means that when
+# a dynamic parameter is inherited by the next run, it will go back to the initial value, since the next run starts from
+# 0 cycles.
+#
+# In this exemplary input file, "temperature" in the general section will be inherited by subsequent runs.
+temperature = 1
+
+# [INHERITABLE PARAMETER]
+#
+# Pressure. It can be a floating-point constant or a dynamic parameter (see "temperature" for reference).
+#
+# In this exemplary input file, we do not specify the pressure in the general section - it will be run-specific. It can
+# be left empty or omitted altogether.
+pressure =
+
+# [INHERITABLE PARAMETER]
+#
 # Comma-separated list of molecule move types that should be performed during the run. Given the number of molecules in
 # the system, each move type declares how many moves should be performed. Move type is sampled at random so that during
 # each cycles the average number of moves of a given type matches the declaration. Most move types support dynamic
@@ -202,8 +257,12 @@ numOfParticles = 1000
 # 4. "flip ([flip every])"
 #    Performs a rotation by 180 degrees of a random particle around its secondary axis. During one cycle
 #    1 / "[flip every]" fraction of particles is flipped (if not specified, "[flip every]" defaults to 10).
+#
+# In this exemplary input file, "moveTypes" in the general section will be inherited by subsequent runs.
 moveTypes = translation 10
 
+# [INHERITABLE PARAMETER]
+#
 # Type of the scaling. Notice that some types allow independent moves for some or all sides which facilitate relaxation
 # of the diagonal part of stress tensor (directional pressures) or even full triclinic relaxation of sheer pressure.
 # If "scalingType" is variant 1.-3. and the box is triclinic, scaling is performed height-wise, ie. face angles remain
@@ -250,9 +309,17 @@ moveTypes = translation 10
 #    [-"volumeStepSize", "volumeStepSize"] interval. This scaling types enables to perform simulations in
 #    isobaric-isotension ensemble (relaxing off-diagonal parts of stress tensor). If "independent" is specified, only a
 #    single, randomly sample side will be perturbed. Otherwise, all are perturbed at once.
+#
+# In this exemplary input file, "scalingType" in the general section will be inherited by subsequent runs, apart from
+# the last run "[run.solid]", for which we will choose triclinic delta scaling to facilitate full relaxation of the
+# crystalline structure.
 scalingType = delta V
 
+# [INHERITABLE PARAMETER]
+#
 # The maximal size of the volume move. Its meaning is dependent on scaling type. Please refer to "scalingType" above.
+#
+# In this exemplary input file, "volumeStepSize" in the general section will be inherited by subsequent runs.
 volumeStepSize = 1000
 
 # The seed for random number generator
@@ -513,30 +580,11 @@ saveOnSignal = true
 # unique name of the run
 [integration.gas]
 
-# Temperature in k_B units. The temperature can be just a floating-point constant, or a dynamic parameter, which changes
-# based on a current simulation cycles. Available dynamic parameters:
-# 1. const [value]
-#    A constant parameter, which always has the same value. It is exactly the same as just passing a single number.
-# 2. linear [initial value] [slope]
-#    If current cycle is "[current cycle]", the value is calculated as "[initial value]" + "[slope]" * "[current cycle]"
-# 3. exp [initial value] [rate]
-#    If current cycle is "[current cycle]", the value is calculated as
-#    [initial value]" * exp("[rate]" * "[current cycle]")
-# 4. piecewise [cycle 1] [parameter 1] , [cycle 2] [parameter 2] , ...
-#    A piecewise combination of dynamic parameters. The parameters are separated by commas. First, the number of cycle
-#    "[cycle ...]" is given when the specific parameter should start, and then parameter specification
-#    "[parameter ...]", (as in 1. - 3.). "[cycle 1]" has to be equal 0 and subsequent "[cycle ...]"-s should be in an
-#    ascending order. Constituent parameters are shifted so that they always start from 0. As an example:
-#       "piecewise 0 const 10 , 1000 linear 10 0.01 , 2000 20"
-#    There, in cycles 0-999 temperature is constant and equal 10, then in cycles 1000-1999 it grows linearly to 20
-#    (to be precise, at cycle 1999 it is 19.99), and then it becomes 20 in 2000-th cycle and stays as such indefinitely.
-#    Note, that for the 3-rd parameter a single value "20" was used equivalently to "const 20".
-# It is important to note that last change of the temperature happens after the last thermalisation cycle and is frozen
-# in the averaging stage. It is advisable to use a constant temperature for some number of cycles in the last part of
-# the thermalization stage.
-temperature = 1
+# Temperature is inherited from the general section (see the information about inheritable paremeters near the top of
+# the file). So are move types and scaling type. For the description of those parameters please refer to the general
+# section.
 
-# Pressure. It can be a floating-point constant or a dynamic parameter (see "temperature" for reference)
+# Pressure is specified explicitly. For the description, refer to the general section
 pressure = 0.1
 
 # For how many full MC cycles the thermalization should be performed
@@ -819,7 +867,7 @@ bulkObservables = pairDensityCorrelation 5 100 radial
 # identical meaning, so the descriptions are not repeated.
 
 [integration.liquid]
-temperature = 1
+# Temperature, move types and scaling type inherited from the previous run
 pressure = 11.5
 thermalisationCycles = 250000
 averagingCycles = 200000
@@ -835,8 +883,11 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 bulkObservables = pairDensityCorrelation 5 100 radial
 
 [integration.solid]
-temperature = 1
+# Temperature and move types and scaling type inherited from the previous run. We change the pressure and scaling type
+# to triclinic to facilitate relaxation of the crystalline structure
 pressure = 20
+scalingType = delta triclinic
+volumeStepSize = 0.001
 thermalisationCycles = 1000000
 averagingCycles = 2000000
 averagingEvery = 20000
