--- a/sample_inputs/overlap_reduction.ini
+++ b/sample_inputs/overlap_reduction.ini
@@ -7,9 +7,13 @@
 initialDimensions = 7 7 7
 initialArrangement = lattice default
 numOfParticles = 512
-moveTypes = rototranslation 0.5 0.1
-scalingType = delta V
-volumeStepSize = 0.5
+
+# All runs share "temperature", "pressure" and "moveTypes", so we set it globally here. For the integration run we
+# change scaling to delta triclinic to facilitate full crystalline structure relaxation.
+temperature = 1
+pressure = 20
+moveTypes = translation 0.1
+
 seed = 1234
 shapeName = Sphere
 shapeAttributes = 0.5
@@ -26,9 +30,8 @@ saveOnSignal = true
 # eliminated. Overlap reduction can output the same data as integration run, apart from ensemble averages.
 [overlaps.too_dense_cubic]
 
-# Temperature and pressure used in Metropolis criterion (same as in an integration run)
-temperature = 1
-pressure = 20
+scalingType = delta V
+volumeStepSize = 0.5
 
 # How often observable snapshots should be taken (same as in an integration run)
 snapshotEvery = 1000
@@ -49,8 +52,8 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 # Overlap relaxation mode is followed by an integration run used to gather the averages.
 
 [integration.solid]
-temperature = 1
-pressure = 20
+scalingType = delta triclinic
+volumeStepSize = 0.001
 thermalisationCycles = 100000
 averagingCycles = 900000
 averagingEvery = 10000
