Sample inputs documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -570,10 +570,15 @@ saveOnSignal = true
 # observables are computed. During averaging phase the auto-adjustment of molecule an volume move amplitudes is turned
 # off. After the finished run ensemble averages of observables are printed on the standard output.
 # Moreover one can request to output the following auxiliary data:
-# 1. internal representation of the packing
+# 1. internal RAMSNAP representation of the final snapshot (it is recommended to always generate it - simulation can
+#    be continued after termination using the saved state)
 # 2. Wolfram Mathematica notebook with the visualisation of the final snapshot
-# 3. output file with ensemble averages (the same ones as are printed on the standard output by default)
-# 4. instantaneous values of the observables every N cycles
+# 3. extended XYZ snapshot of the final state
+# 4. internal compact RAMTRJ trajectory of the simulation
+# 5. extended XYZ trajectory of the simulation
+# 6. output file with ensemble averages (the same ones as are printed on the standard output by default)
+# 7. instantaneous values of the observables every N cycles
+# 8. ensemble averaged "bulk observables" in separate files (such as histograms)
 # The observables to compute are specified using "observables" parameter.
 
 # Each integration run is an INI section with the format "\[integration.[run name]\]" - "[run name]" is user-specified
@@ -599,11 +604,17 @@ averagingEvery = 200
 # How often instantaneous values of observables should be sampled
 snapshotEvery = 100
 
-# The name of the file to save internal representation of the packing. If empty, it is not generated. The internal
-# representation
-# encodes box size, particle positions and orientations, last Monte Carlo step amplitudes, the number of cycles and
-# other package-specific information. The format may change at any moment
-packingFilename = packing_gas.dat
+# The name of the file to save internal RAMSNAP representation of the packing. If empty, it is not generated. The
+# internal representation encodes box size, particle positions and orientations, last Monte Carlo step amplitudes, the
+# number of cycles and other internal information enabling the software to start the simulation in the same state as it
+# was finished. The format is human-readable and can be manually parsed, however its specification may change over time.
+packingFilename = packing_gas.ramsnap
+
+# The name of the file to save extended XYZ snapshot of the packing. If empty, it is not generated. It encodes
+# simulation box and both particle positions and orientation, as well the same auxiliary information as internal RAMSNAP
+# format. The format is recognized by OVITO software. It may be supplemented by Wavefront OBJ shape model for
+# visualization (see ./rampack shape-preview --help)
+xyzPackingFilename = packing_gas.xyz
 
 # If specified, the visualization of the final shapshot in the format of Wolfram Mathematica notebook will be stored to
 # a file. Format:
@@ -640,10 +651,15 @@ bulkObservableFilenamePattern = {}_gas.txt
 # If not empty, trajectories of the particles will be stored in a compact binary RAMTRJ format. It then can be replayed
 # for example to calculate different observables. Not all cycles are stored - it is done every "snapshotEvery" cycles.
 #
-# Trajectories are stored in real time and are safely closes when the exception is thrown. If however it gets somehow
+# Trajectories are stored in real time and are safely closed when the exception is thrown. If however it gets somehow
 # truncated, it can be fixed using "./rampack trajectory --auto-fix". For more information see
 # "./rampack trajectory --help".
 recordingFilename = recording_gas.ramtrj
+
+# If not empty, trajectories of the particles will be stored in a textual extended XYZ format, encoding box dimensions
+# and both positions and orientations, as well as current number of cycles. The format is recognized by OVITO. It may be
+# supplemented by Wavefront OBJ shape model for visualization (see ./rampack shape-preview --help)
+xyzRecordingFilename = recording_gas.xyz
 
 # The observables which should be computed during simulation. Each observables is in the format
 # "([scope]) [observable name] ([observable-dependent parameters])"
@@ -873,12 +889,14 @@ thermalisationCycles = 250000
 averagingCycles = 200000
 averagingEvery = 2000
 snapshotEvery = 100
-packingFilename = packing_liquid.dat
+packingFilename = packing_liquid.ramsnap
+xyzPackingFilename = packing_liquid.xyz
 wolframFilename = packing_liquid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_liquid.txt
 bulkObservableFilenamePattern = {}_liquid.txt
 recordingFilename = recording_liquid.ramtrj
+xyzRecordingFilename = recording_liquid.xyz
 observables = numberDensity , inline packingFraction , compressibilityFactor
 bulkObservables = pairDensityCorrelation 5 100 radial
 
@@ -892,11 +910,13 @@ thermalisationCycles = 1000000
 averagingCycles = 2000000
 averagingEvery = 20000
 snapshotEvery = 100
-packingFilename = packing_solid.dat
+packingFilename = packing_solid.ramsnap
+xyzPackingFilename = packing_solid.xyz
 wolframFilename = packing_solid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_solid.txt
 bulkObservableFilenamePattern = {}_solid.txt
 recordingFilename = recording_solid.ramtrj
+xyzRecordingFilename = recording_solid.xyz
 observables = numberDensity , inline packingFraction , compressibilityFactor
 bulkObservables = pairDensityCorrelation 5 100 radial
