--- a/sample_inputs/overlap_reduction.ini
+++ b/sample_inputs/overlap_reduction.ini
@@ -43,8 +43,8 @@ snapshotEvery = 1000
 helperInteraction = square_inverse_core 2 1
 
 # Output-related parameters, same as in an integration run
-packingFilename = packing_ov_relax.dat
-wolframFilename = packing_ov_relax.nb
+packingFilename = packing_ov_relax.ramsnap
+xyzFilename = packing_ov_relax.xyz
 observableSnapshotFilename = observable_ov_relax.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
@@ -58,7 +58,7 @@ thermalisationCycles = 100000
 averagingCycles = 900000
 averagingEvery = 10000
 snapshotEvery = 100
-packingFilename = packing_solid.dat
-wolframFilename = packing_solid.nb
+packingFilename = packing_solid.ramsnap
+xyzFilename = xyzFilename.nb
 observableSnapshotFilename = observable_solid.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
