Sample input documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -811,9 +811,9 @@ xyzRecordingFilename = recording_gas.xyz
 #     [function] is some function taking shape at a given position and returning some value. It can be one of:
 #     13.1.1. "const"
 #             constant function. F(x, y, z) reduces then to rho(x, y, z), so it can be used to track density modulation
-#     13.1.2. "(primaryAxis|secondaryAxis) (x|y|z)"
-#             if returns x|y|z component of primaryAxis|secondaryAxis of the shape, so it can be used to track
-#             modulation of shape axis
+#     13.1.2. "(primaryAxis|secondaryAxis|auxiliaryAxis) (x|y|z)"
+#             if returns x|y|z component of primaryAxis|secondaryAxis|auxiliaryAxis of the shape, so it can be used to
+#             track modulation of shape axis
 #     One can think of this observable as the generalization of finding the phase of smectic order parameter. In fact,
 #     if only one of "[wavenumber ...]" is non-zero and "[function]" = "const", it reduces to calculating the position
 #     of the maximum of smectic density modulation.
@@ -860,8 +860,9 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 #    "[binning specification]" have exactly the same meaning as in 1. "pairDensityCorrelation". "[correlation function]"
 #    specifies which correlation function should be calculated. Available variants:
 #    2.1. "S110 [axis]"
-#         S_110 correlation function, defined as the dot product of the axes of molecules. "[axis]" can be "primary" or
-#         "secondary" and specifies which molecular axis should be used. "[function signature name]" := "S110"
+#         S_110 correlation function, defined as the dot product of the axes of molecules. "[axis]" can be "primary",
+#         "secondary" or "auxiliary" and specifies which molecular axis should be used.
+#         "[function signature name]" := "S110"
 #    The observable outputs rows of the form:
 #        r corr(r)
 #    Observable name is "[function signature name]_[binning signature name]", where "[function signature name]" depends
