--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -43,6 +43,10 @@
 
 # Below is the full list of general parameters with a detailed description of each.
 
+# The version of RAMPACK this file is targeted to. Input file versions lower than RAMPACK version should be parsed
+# properly, however some new features may be limited
+version = 0.1
+
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
 # 1. "[side length]"
 #    cubic box with a given side length
