SmoothWedge: bottom and top instead of large and small

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -419,14 +419,14 @@ seed = 1234
 #    of the first cap at the beginning of the banana, and "end", similarly, for the last cap.
 #
 # 8. "shapeName = SmoothWedge"
-#    "shapeAttributes = [length] [large radius] [small radius] ([subdivisions = 1])"
+#    "shapeAttributes = [length] [bottom radius] [top radius] ([subdivisions = 1])"
 #    "interaction = hard"
-#    a shape similar to PolysphereWedge, but smooth. It is built by placing 2 spheres with radii "[large radius]" (R)
-#    and "[small radius]" (r) with centers distant by "[length]" (l) and computing a convex hull of them. Spheres are
-#    placed on z axis, large at the bottom and small at the top with z coordinates, respectively, (R - r - l)/2 and
+#    a shape similar to PolysphereWedge, but smooth. It is built by placing 2 spheres with radii "[bottom radius]" (R)
+#    and "[top radius]" (r) with centers distant by "[length]" (l) and computing a convex hull of them. Spheres are
+#    placed on z axis, one at the bottom and the other at the top with z coordinates, respectively, (R - r - l)/2 and
 #    (R - r + l)/2. This way the circumsphere is optimal. One can optionally specify number of subdivisions:
 #    "[subdivisons]" to use the neighbour grid more efficiently. Only hard interaction is supported. It defines two
-#    non-standard named points: "ss" and "sl" for the origins of, respectively, the small sphere and the large one.
+#    non-standard named points: "beg" and "end" for the origins of, respectively, the bottom sphere and the top one.
 #
 # 9. "shapeName = GenericXenoCollide"
 #    "shapeAttributes = primaryAxis [...] secondaryAxis [...] geometricOrigin [...] volume [...] script [...]
