--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -43,8 +43,8 @@
 
 # Below is the full list of general parameters with a detailed description of each.
 
-# The version of RAMPACK this file is targeted to. Input file versions lower than RAMPACK version should be parsed
-# properly, however some new features may be limited
+# The version of RAMPACK this file is targeted to. Input file versions lower than the current RAMPACK version should be
+# parsed properly, however some new features will be limited
 version = 0.1
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
