Input file documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -44,8 +44,9 @@
 # Below is the full list of general parameters with a detailed description of each.
 
 # The version of RAMPACK this file is targeted to. Input file versions lower than the current RAMPACK version should be
-# parsed properly, however some new features will be limited
-version = 0.1
+# parsed properly, however some new features will be limited.
+# Current version is: 0.2
+version = 0.2
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
 # 1. "[side length]"
@@ -333,8 +334,8 @@ seed = 1234
 # axis ratio are given by "shapeAttributes". Each shape may support one ore more interaction types, specified by
 # "interaction". A full list of shapes, together with their attributes and interactions is given below. Each shape
 # declares a set of the so-called named points, which are some features, like origins of constituent subshapes, ect. By
-# default, each shape defines two named points - "cm" for center of mass and "o" for geometric origin. Non-standard, if
-# present, one are described for each shape individually.
+# default, each shape defines one named point - "o" for geometric origin. Non-standard, if present, one are described
+# for each shape individually. In particular, shapes may of may not declare mass centre "cm" named point.
 #
 # Program mode "shape-preview" may be useful when selecting shape parameters - it displays rich metadata and enables one
 # to generate Wolfram Mathematica preview of the shape. See "./rampack shape-preview --help" for more info.
@@ -357,21 +358,23 @@ seed = 1234
 #         short-ranged attractive or repulsive interaction, resembling screened dipolar interaction, defined as:
 #         epsilon ((sigma/r)^2 - 1)   for r < sigma,
 #         0                           for r >= sigma.
+#    It defines additional named point "cm" for mass centre.
 #
 # 2. "shapeName = Spherocylinder"
 #    "shapeAttributes = [length] [radius]"
 #    "interaction = hard"
 #    spherocylinder with cap radius "[radius]" (or, equivalently, half-width) and the distance between cap centers
-#    "[length]". For the default orientation, "Spherocylinder" is aligned with x axis. Only hard interaction is
-#    supported. It defines two additional named points: "beg" and "end" for origins of caps of the spherocylinder.
+#    "[length]". For the default orientation, "Spherocylinder" is aligned with z axis. Only hard interaction is
+#    supported. It defines two additional named points: "beg" and "end" for origins of caps of the spherocylinder as
+#    well as"cm" for mass centre.
 #
 # 3. "shapeName = KMer"
 #    "shapeAttributes = [number of spheres] [radius] [distance]"
 #    "interaction = [interaction; the same ones as for Sphere]"
-#    a linear chain of "[number of spheres]" spheres with radius "[radius]". The centers are equally spaced with a
-#    distance "[distance]". Supported interactions: same as for "Sphere", however each pair of beads is treated
-#    separately. It defines some additional named points. First group is inherited from "Polysphere". Second group is
-#    KMer-specific: "beg" and "end" for the first and the last sphere's origin.
+#    a linear chain of "[number of spheres]" spheres with radius "[radius]" lying on z axis. The centers are equally
+#    spaced with a distance "[distance]". Supported interactions: same as for "Sphere", however each pair of beads is
+#    treated separately. It defines some additional named points. First group is inherited from "Polysphere". Second
+#    group is KMer-specific: "beg" and "end" for the first and the last sphere's origin as well as "cm" for mass centre.
 #
 # 4. "shapeName = PolysphereBanana"
 #    "shapeAttributes = [arc radius] [arc angle] [number of spheres] [sphere radius]"
@@ -379,35 +382,41 @@ seed = 1234
 #    chain of "[number of spheres]" spheres with radius "[sphere radius]" placed on an arc (banana-shaped). The arc is
 #    defined by its radius "[arc radius]" and arc angle "[arc angle]". The centres of spheres are equidistantly placed
 #    on the arc and its endpoints are at the same time the centres of outermost spheres. The centers of spheres in
-#    "PolysphereBanana" molecule with a default orientation lie within xy plane, the main axis (joining the ends of the
-#    arc) is y axis and the arc is bent towards the negative x semi-axis (the vector joining either endpoint and the
-#    middle has a negative x component). Supported interactions: same as for "Sphere", however each pair of beads is
-#    treated separately. It defines some additional named points. First group are ones inherited from Polysphere, namely
-#    "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins. Second group is
-#    PolysphereBanana-specific: "beg" and "end" for the first and the last sphere's origin.
+#    "PolysphereBanana" molecule with a default orientation lie within xz plane, the main axis (joining the ends of the
+#    arc) is z axis and the arc is bent towards the negative x semi-axis (the vector joining either endpoint and the
+#    middle has a negative x component). For "[arc angle]" < pi, the origin is in the middle of the segment joining
+#    endpoints, while for "[arc angle]" >= pi it coincides with the arc origin (in order to minimize circumsphere
+#    radius). Supported interactions: same as for "Sphere", however each pair of beads is treated separately. It defines
+#    some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]" is an
+#    index of a single sphere (starting from 0) describing their origins. Second group is PolysphereBanana-specific:
+#    "beg" and "end" for the first and the last sphere's origin. It also defines mass centre "cm" named point if spheres
+#    don't overlap.
 #
 # 5. "shapeName = PolysphereLollipop"
 #    "shapeAttributes = [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
 #    "interaction = [interaction; the same ones as for Sphere]"
-#    linear chain of "[num of spheres]" spheres, where a single sphere at the end has different size than the rest of
-#    them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all apart from the last,
-#    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
-#    In particular, 0 means that the spheres are tangent. Supported interactions: same as for "Sphere", however each
-#    pair of beads is treated separately. It defines some additional named points. First group are ones inherited from
-#    Polysphere, namely "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins.
-#    Second group is PolysphereLollipop-specific: "ss" and "sl" for origins of, respectively, the first small sphere at
-#    the beginning and the large sphere.
+#    linear chain of "[num of spheres]" spheres placed on the z axis, where a single sphere at the end has different
+#    size than the rest of them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all
+#    apart from the last, and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how
+#    much spheres overlap. In particular, 0 means that the spheres are tangent. The origin is chosen in such a way that
+#    the circumsphere radius is minimal. Supported interactions: same as for "Sphere", however each pair of beads is
+#    treated separately. It defines some additional named points. First group are ones inherited from Polysphere, namely
+#    "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    PolysphereLollipop-specific: "ss" and "sl" for origins of, respectively, the first small sphere at the beginning
+#    and the large sphere. It also defines mass centre "cm" named point if both "[small penetration]" and
+#    "[large penetration]" are zero.
 #
 # 6. "shapeName = PolysphereWedge"
-#    "shapeAttributes = [num of spheres] [small radius] [large radius] [penetration]"
+#    "shapeAttributes = [num of spheres] [bottom radius] [top radius] [penetration]"
 #    "interaction = [interaction; the same ones as for Sphere]"
-#    linear chain of "[num of spheres]" spheres, where radii of spheres are increased linearly. "[small radius]" and
-#    "[large radius]" are radii of, respectively, the first and the last sphere (usually the last one is larger).
-#    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent. Supported
-#    interactions: same as for "Sphere", however each pair of beads is treated separately. It defines some additional
-#    named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]" is an index of a single
-#    sphere (starting from 0) describing their origins. Second group is PolysphereWedge-specific: "ss" and "sl" for
-#    origins of, respectively, the smallest sphere and the largest one.
+#    linear chain of "[num of spheres]" spheres placed on the z axis, where radii of spheres are increased linearly.
+#    "[bottom radius]" and "[top radius]" are radii of, respectively, the bottom and the top sphere. "[penetration]"
+#    describes how much spheres overlap. In particular, 0 means that the spheres are tangent. The origin is chosen in
+#    such a way that the circumsphere radius is minimal. Supported interactions: same as for "Sphere", however each pair
+#    of beads is treated separately. It defines some additional named points. First group are ones inherited from
+#    Polysphere, namely "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins.
+#    Second group is PolysphereWedge-specific: "beg" and "end" for origins of, respectively, the bottom sphere and the
+#    top one. It also defines mass centre "cm" named point if "[penetration]" is zero.
 #
 # 7. "shapeName = PolyspherocylinderBanana"
 #    "shapeAttributes = [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
@@ -752,7 +761,8 @@ xyzRecordingFilename = recording_gas.xyz
 #    where g_alpha (alpha = x, y, z) are reciprocal lattice vectors (which the box being the unit cell), while n_alpha
 #    are Miller indices taken from [-"[n_alpha max]", "[n_alpha max]"] - the maximal length of the wavevector is
 #    controlled by an optional parameter "[n_alpha max]". If it is not specified, it defaults to 5. New syntax lets user
-#    choose which point should be used to calculate smectic order. If not specified, it defaults to mass centre "cm".
+#    choose which point should be used to calculate smectic order. If not specified, it defaults to the geometric origin
+#    "o".
 #    Constituent values:
 #    8.1. "tau"
 #         absolute value of smectic order parameter; INTERVAL VALUE
@@ -779,7 +789,7 @@ xyzRecordingFilename = recording_gas.xyz
 #    value of psi_r is averaged over all molecules in the system. "[Miller indices]" should be in format "[h].[k].[l]"
 #    (negative values are allowed). At least one rank should be given. New syntax enables user to change which point
 #    is used to assign molecules into layers ("[layering point name]") and which is used to find nearest neighbours and
-#    calculate bond order ("[bond order point name]"). Both default to mass centre "cm".
+#    calculate bond order ("[bond order point name]"). Both default to the geometric origin "o".
 #    Constituent values:
 #    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
@@ -848,13 +858,13 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 #    pairs are selected and how the distance is calculated. Variants:
 #    1.1. "radial ([focal point])
 #         All pairs are sampled and the distance is just an ordinary Euclidean distance. Produces a standard radial
-#         distribution function. "[focal point]" describes which named point should be used and defaults to mass center
-#         "cm". "[binning signature name]" := "r".
+#         distribution function. "[focal point]" describes which named point should be used and defaults to the
+#         geometric origin "o". "[binning signature name]" := "r".
 #    1.2. "layerwiseRadial [h].[k].[l] ([focal point])"
 #         First, the system if divided into layers, calculated based on the smectic order parameter for Miller indices
 #         "[h]", "[k]", "[l]". Then, pairs are selected only from within the layer (subject to PBC) and distance is
 #         computed along the layer plane. "[focal point]" describes which named point should be used and defaults to
-#         mass center "cm". "[binning signature name]" := "lr"
+#         the geometric origin "o". "[binning signature name]" := "lr"
 #    The observable outputs rows of the form:
 #        r rho(r)
 #    Observable name is "rho_[binning signature name]", where "[binning signature name]" depends on
