Input file documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -45,8 +45,8 @@
 
 # The version of RAMPACK this file is targeted to. Input file versions lower than the current RAMPACK version should be
 # parsed properly, however some new features will be limited.
-# Current version is: 0.2.1
-version = 0.2.1
+# Current version is: 0.3
+version = 0.3
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
 # 1. "[side length]"
@@ -611,11 +611,14 @@ thermalisationCycles = 10000
 # For how many full MC cycles averaging should be performed
 averagingCycles = 20000
 
-# Ensemble averages are taken "[averagingEvery]" cycles
+# Ensemble averages are taken "[averagingEvery]" cycles (default value: 100)
 averagingEvery = 200
 
-# How often instantaneous values of observables should be sampled
+# How often instantaneous values of observables should be sampled (default value: 100)
 snapshotEvery = 100
+
+# How often inline info with number of cycles and inline values of observables should be sampled (default value: 100)
+inlineInfoEvery = 1000
 
 # The name of the file to save internal RAMSNAP representation of the packing. If empty, it is not generated. The
 # internal representation encodes box size, particle positions and orientations, last Monte Carlo step amplitudes, the
@@ -904,6 +907,7 @@ thermalisationCycles = 250000
 averagingCycles = 200000
 averagingEvery = 2000
 snapshotEvery = 100
+inlineInfoEvery = 1000
 packingFilename = packing_liquid.ramsnap
 xyzPackingFilename = packing_liquid.xyz
 wolframFilename = packing_liquid.nb
@@ -925,6 +929,7 @@ thermalisationCycles = 1000000
 averagingCycles = 2000000
 averagingEvery = 20000
 snapshotEvery = 100
+inlineInfoEvery = 1000
 packingFilename = packing_solid.ramsnap
 xyzPackingFilename = packing_solid.xyz
 wolframFilename = packing_solid.nb
