Overlap reduction input file documentation update

--- a/sample_inputs/overlap_reduction.ini
+++ b/sample_inputs/overlap_reduction.ini
@@ -4,6 +4,8 @@
 # The general information about input file, its structure and meaning of parameters are mainly gathered in
 # integration.ini file. This input file only supplements it with information about overlap reduction mode.
 
+version = 0.3
+
 initialDimensions = 7 7 7
 initialArrangement = lattice default
 numOfParticles = 512
@@ -34,7 +36,10 @@ scalingType = delta V
 volumeStepSize = 0.5
 
 # How often observable snapshots should be taken (same as in an integration run)
-snapshotEvery = 1000
+snapshotEvery = 100
+
+# How often inline info should be printed (same as in an integration run)
+inlineInfoEvery = 1000
 
 # Interaction which can be used to help eliminate the overlaps. Only interactions available for a shape specified the
 # general section are supported. This interaction will be combined with main interaction and it will be done only for
@@ -44,9 +49,12 @@ helperInteraction = square_inverse_core 2 1
 
 # Output-related parameters, same as in an integration run
 packingFilename = packing_ov_relax.ramsnap
-xyzFilename = packing_ov_relax.xyz
+wolframFilename = packing_ov_relax.nb
+xyzPackingFilename = packing_ov_relax.xyz
 observableSnapshotFilename = observable_ov_relax.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
+recordingFilename = recording_ov_relax.ramtrj
+xyzRecordingFilename = recording_ov_relax.xyz
 
 
 # Overlap relaxation mode is followed by an integration run used to gather the averages.
@@ -58,7 +66,11 @@ thermalisationCycles = 100000
 averagingCycles = 900000
 averagingEvery = 10000
 snapshotEvery = 100
+inlineInfoEvery = 1000
 packingFilename = packing_solid.ramsnap
-xyzFilename = xyzFilename.nb
+wolframFilename = packing_solid.nb
+xyzPackingFilename = packing_solid.xyz
 observableSnapshotFilename = observable_solid.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
+recordingFilename = recording_solid.ramtrj
+xyzRecordingFilename = recording_solid.xyz
