Input file documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -66,12 +66,13 @@ initialDimensions = 100 100 100
 # "[cell specification]" | "[transformation 1]" | ... | "[transformation n]" | "[population scheme]"
 #
 # Optional transformations can be stacked together and are separated using a pipe "|". Population scheme is also
-# optional (implicit behaviour is equivalent to "populate serial xyz" - see below).
+# optional (implicit behaviour is equivalent to "populate serial" - see below).
 #
 # "[cell specification]" specifies the type of a unit cell and a number of those cells. Variants:
 # 1. "[cell specification]" := "[cell type] default"
-#    create n x n x n (where n is chosen automatically) lattice just large enough to accommodate all particles.
-#    "initialDimensions" cannot be "auto" in this variant - cell dimensions are inferred from the box size.
+#    create a lattice with automatic number of cells large enough to accommodate all particles; at the same time, the
+#    algorithm tries to keep the the heights of the unit cell as close to each other as possible. "initialDimensions"
+#    cannot be "auto" in this variant - cell dimensions are inferred from the box size.
 # 2. "[cell specification]" := "[cell type] ncell [nx] [ny] [nz]"
 #    number of cells is specified explicitly. Cell dimensions are calculated based on the box size (thus is cannot be
 #    "auto" in this case)
@@ -157,7 +158,8 @@ initialDimensions = 100 100 100
 #    Populates the lattice cell by cell looping through cell indices. The order of loops is given, from outermost to
 #    innermost, by "[axis order]". For example, for "[axis order]" = "yxz", first z column is filled, then zx plane is
 #    filled with those columns, and lastly those planes are stacked in y direction. Within a cell, molecules are placed
-#    in the order in which they appear within the cell. Default values of "[axis order]" is "xyz".
+#    in the order in which they appear within the cell. If "[axis order]" is not specified manually, the first axis is
+#    the one with most lattice cells and the last - the one with least.
 # 2. "[population scheme]" := "random [rng seed]"
 #    Molecules are placed at random using RNG sequence seeded with "[rng seed]". However, their order is not completely
 #    random - particles with close indices will have relatively close real-space positions (for a better cache
